# ai-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bbarwik_ai_tools/: cli.py
tests/: test_cli.py
